--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
 # MongoDB Configuration (using your existing URI)
-MONGO_URI=mongodb+srv://yashitiwary:9838yashi@cluster0.r5x2deh.mongodb.net/diet_planner?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://dietadmi:dietpass123@cluster0.frfock5.mongodb.net/diet_planner?retryWrites=true&w=majority&appName=Cluster0
 
-# Secret Key for Flask Sessions
-SECRET_KEY=your-secret-key-here-please-change-this
+SECRET_KEY=your-random-secret-key
+
 
 # Google Gemini API Configuration
 # Get your free API key from: https://makersuite.google.com/app/apikey
-GEMINI_API_KEY=AIzaSyAu4Oddsfl1HNGmHR6ya5BzJ1fPSAkK240
+GEMINI_API_KEY=AIzaSyBj_bwlNkl8NasqWfa4DBa1AVMMTOANfD0
 
 # Gemini Model
-GEMINI_MODEL=gemini-2.5-flash
+GEMINI_MODEL=gemini-2.5-pro
 
 # Feature Flags
 ENABLE_AI_MEAL_PLANNING=true
